# 2DFGF

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  compile.sh  player
src/: animationsystem.cpp  animationsystem.h  application.cpp  application.h  billboard.cpp  billboard.h  button.h  buttonstate.h  buttontype.h  camera.cpp  camera.h  character.cpp  character.h  characterindex.h  charactermenu.cpp  charactermenu.h  charactermenustate.h  charactersystem.cpp  charactersystem.h  controller.cpp  controller.h  drawsystem.cpp  drawsystem.h  fight.cpp  fight.h  fightsystem.cpp  fightsystem.h  fontsystem.cpp  fontsystem.h  game.cpp  game.h  gamestate.h  healthbar.cpp  healthbar.h  helper.cpp  helper.h  hitbox.cpp  hitbox.h  inputsystem.cpp  inputsystem.h  (+48 more)
src/characters/: null.cpp  null.h
src/moves/: null.cpp  null.h  nullmoves.h
src/stages/: null.cpp  null.h
